--- a/wk2_fps.vcxproj
+++ b/wk2_fps.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\collision\collision_handler.cpp" />
-    <ClCompile Include="src\entities\HouseGenerator.cpp" />
+    <ClCompile Include="src\entities\house_generator.cpp" />
     <ClCompile Include="src\scenes\in_Game_Scene.cpp" />
     <ClCompile Include="src\computervision\FaceDetector.cpp" />
     <ClCompile Include="src\computervision\ObjectDetection.cpp" />
@@ -44,7 +44,7 @@
   <ItemGroup>
     <ClInclude Include="src\collision\collision.h" />
     <ClInclude Include="src\collision\collision_handler.h" />
-    <ClInclude Include="src\entities\HouseGenerator.h" />
+    <ClInclude Include="src\entities\house_generator.h" />
     <ClInclude Include="src\scenes\in_Game_Scene.h" />
     <ClInclude Include="src\scenes\scene.h" />
     <ClInclude Include="src\computervision\FaceDetector.h" />
