--- a/wk2_fps.vcxproj.filters
+++ b/wk2_fps.vcxproj.filters
@@ -75,7 +75,7 @@
     <ClCompile Include="src\computervision\BackgroundRemover.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\entities\HouseGenerator.cpp">
+    <ClCompile Include="src\entities\house_generator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -158,7 +158,7 @@
     <ClInclude Include="src\toolbox\Timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\entities\HouseGenerator.h">
+    <ClInclude Include="src\entities\house_generator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
