--- a/wk2_fps.vcxproj.filters
+++ b/wk2_fps.vcxproj.filters
@@ -4,11 +4,11 @@
     <ClCompile Include="src\collision\collision_handler.cpp" />
     <ClCompile Include="src\scenes\in_Game_Scene.cpp" />
     <ClCompile Include="src\computervision\async\async_arm_detection.cpp" />
-    <ClCompile Include="src\computervision\ObjectDetection.cpp" />
+    <ClCompile Include="src\computervision\object_detection.cpp" />
     <ClCompile Include="src\computervision\OpenPoseVideo.cpp" />
-    <ClCompile Include="src\computervision\SkinDetector.cpp" />
-    <ClCompile Include="src\computervision\FingerCount.cpp" />
-    <ClCompile Include="src\computervision\BackgroundRemover.cpp" />
+    <ClCompile Include="src\computervision\skin_detector.cpp" />
+    <ClCompile Include="src\computervision\finger_count.cpp" />
+    <ClCompile Include="src\computervision\background_remover.cpp" />
     <ClCompile Include="src\entities\camera.cpp" />
     <ClCompile Include="src\entities\collision_entity.cpp" />
     <ClCompile Include="src\entities\entity.cpp" />
@@ -23,7 +23,7 @@
     <ClCompile Include="src\toolbox\toolbox.cpp" />
     <ClCompile Include="src\scenes\startup_Scene.cpp" />
     <ClCompile Include="src\computervision\calibration\HandCalibrator.cpp" />
-    <ClCompile Include="src\computervision\HandDetectRegion.cpp" />
+    <ClCompile Include="src\computervision\hand_detect_region.cpp" />
     <ClCompile Include="src\entities\main_character.cpp" />
     <ClCompile Include="src\entities\house_generator.cpp" />
     <ClCompile Include="src\computervision\MenuTest.cpp" />
@@ -118,7 +118,7 @@
     <ClInclude Include="src\toolbox\toolbox.h" />
     <ClInclude Include="src\scenes\startup_Scene.h" />
     <ClInclude Include="src\computervision\calibration\HandCalibrator.h" />
-    <ClInclude Include="src\computervision\HandDetectRegion.h" />
+    <ClInclude Include="src\computervision\hand_detect_region.h" />
     <ClInclude Include="src\computervision\calibration\StaticSkinTreshold.h" />
     <ClInclude Include="src\collision\collision.h" />
     <ClInclude Include="src\collision\collision_handler.h" />
@@ -126,11 +126,11 @@
     <ClInclude Include="src\entities\house_generator.h" />
     <ClInclude Include="src\scenes\in_Game_Scene.h" />
     <ClInclude Include="src\scenes\scene.h" />
-    <ClInclude Include="src\computervision\FingerCount.h" />
-    <ClInclude Include="src\computervision\BackgroundRemover.h" />
+    <ClInclude Include="src\computervision\finger_count.h" />
+    <ClInclude Include="src\computervision\background_remover.h" />
     <ClInclude Include="src\computervision\MenuTest.h" />
-    <ClInclude Include="src\computervision\SkinDetector.h" />
-    <ClInclude Include="src\computervision\ObjectDetection.h" />
+    <ClInclude Include="src\computervision\skin_detector.h" />
+    <ClInclude Include="src\computervision\object_detection.h" />
     <ClInclude Include="src\entities\camera.h" />
     <ClInclude Include="src\entities\collision_entity.h" />
     <ClInclude Include="src\entities\entity.h" />
